Fix up options page so it fits on firefox android

--- a/options/options.css
+++ b/options/options.css
@@ -6,22 +6,15 @@
 
 html {
 	font-size: 16px;
-	background: #000;
+	background: #1b1b24;
 }
 
 body {
-	margin: 0 auto;
+	margin: 2rem auto;
 	padding: 0 1rem;
-	font: 1rem/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+	font: 1rem/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
 	color: #c6d4df;
-	background: #1b2838;
-	width: 34rem;
-}
-
-@media (min-width: 800px) {
-	body {
-		margin: 2rem auto;
-	}
+	max-width: 34rem;
 }
 
 h1, h2, h3, h4 {
@@ -41,13 +34,9 @@ h2 {
 h3 {
 	margin-top: 3rem;
 	font-size: 1.75rem;
-	margin-left: -1rem;
-	margin-right: -1rem;
-	padding: .5rem 1rem;
+	font-weight: 600;
+	font-style: italic;
 	color: #fff;
-	background-color: #0197cf;
-	text-shadow: 1px 2px 0 #1b2838;
-	text-align: center;
 	text-transform: uppercase;
 }
 
@@ -69,17 +58,15 @@ p {
 }
 
 .container {
-	max-width: 35rem;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .footer {
-	background: #121212;
 	margin-top: 3rem;
 	margin-left: -1rem;
 	margin-right: -1rem;
-	padding: 2rem 0;
+	padding-top: 2rem;
 	text-align: center;
 	border-top: 1px solid #0197cf;
 	color: #34c8fe;
